--- a/battery-ui/src/App.css
+++ b/battery-ui/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   background-image: url("livebackground.jpeg");
+  background-attachment: fixed;
   background-size: cover;
   padding-bottom: 200px;
 }
